quarkus-opentelemetry/openshift/00-odf-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-storage
