quarkus-opentelemetry/openshift/02-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-otel-observability
  namespace: opentelemetry
  labels:
    app: quarkus-otel-observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-otel-observability
  template:
    metadata:
      labels:
        app: quarkus-otel-observability
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/opentelemetry/quarkus-otel-observability:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: quarkus-otel-observability
  namespace: opentelemetry
  labels:
    app: quarkus-otel-observability
spec:
  selector:
    app: quarkus-otel-observability
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-otel-observability
  namespace: opentelemetry
spec:
  to:
    kind: Service
    name: quarkus-otel-observability
  port:
    targetPort: http
  tls:
    termination: edge
